--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -613,24 +613,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 79,
       "id": "87cbef80",
       "metadata": {
         "id": "87cbef80",
-        "tags": []
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "6280483e-aa1c-4edc-a8cc-cc087359151a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-79-3d91ef08986a>\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Train the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m history = model.fit(\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mtrain_generator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'train_generator' is not defined"
+          ]
+        }
+      ],
       "source": [
-        "def create_model():\n",
-        "    model = Sequential([\n",
-        "        # Capas de tu modelo aquí\n",
-        "        # ...\n",
-        "    ])\n",
+        "# Define and compile your model\n",
+        "model = tf.keras.models.Sequential([\n",
+        "    # Add layers to your model here\n",
+        "])\n",
         "\n",
-        "    # Compila el modelo con el optimizador \"adam\"\n",
-        "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "    return model"
+        "# Train the model\n",
+        "history = model.fit(\n",
+        "    train_generator,\n",
+        "    epochs=15,\n",
+        "    verbose=1,\n",
+        "    validation_data=validation_generator\n",
+        ")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
