--- a/C2/W3/assignment/C2W3_Assignment.ipynb
+++ b/C2/W3/assignment/C2W3_Assignment.ipynb
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "id": "f35f6f72",
       "metadata": {
         "cellView": "code",
@@ -238,43 +238,51 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "\n",
-        "# GRADED FUNCTION: train_val_generators\n",
         "def train_val_generators(TRAINING_DIR, VALIDATION_DIR):\n",
-        "  \"\"\"\n",
-        "  Creates the training and validation data generators\n",
+        "    \"\"\"\n",
+        "    Creates the training and validation data generators.\n",
         "\n",
-        "  Args:\n",
-        "    TRAINING_DIR (string): directory path containing the training images\n",
-        "    VALIDATION_DIR (string): directory path containing the testing/validation images\n",
+        "    Args:\n",
+        "        TRAINING_DIR (string): directory path containing the training images\n",
+        "        VALIDATION_DIR (string): directory path containing the testing/validation images\n",
         "\n",
-        "  Returns:\n",
-        "    train_generator, validation_generator: tuple containing the generators\n",
-        "  \"\"\"\n",
-        "  ### START CODE HERE\n",
+        "    Returns:\n",
+        "        train_generator, validation_generator: tuple containing the generators\n",
+        "    \"\"\"\n",
         "\n",
-        "  # Instantiate the ImageDataGenerator class\n",
-        "  # Don't forget to normalize pixel values and set arguments to augment the images\n",
-        "  train_datagen = None\n",
+        "    # Instantiate the ImageDataGenerator class for training data\n",
+        "    train_datagen = ImageDataGenerator(\n",
+        "        rescale=1./255.,\n",
+        "        rotation_range=40,\n",
+        "        width_shift_range=0.2,\n",
+        "        height_shift_range=0.2,\n",
+        "        shear_range=0.2,\n",
+        "        zoom_range=0.2,\n",
+        "        horizontal_flip=True\n",
+        "    )\n",
         "\n",
-        "  # Pass in the appropriate arguments to the flow_from_directory method\n",
-        "  train_generator = train_datagen.flow_from_directory(directory=None,\n",
-        "                                                      batch_size=32,\n",
-        "                                                      class_mode=None,\n",
-        "                                                      target_size=(None, None))\n",
+        "    # Pass in the appropriate arguments to the flow_from_directory method for training data\n",
+        "    train_generator = train_datagen.flow_from_directory(\n",
+        "        directory=TRAINING_DIR,\n",
+        "        batch_size=40,\n",
+        "        class_mode='binary',\n",
+        "        target_size=(150, 150)\n",
+        "    )\n",
         "\n",
-        "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  # Remember that validation data should not be augmented\n",
-        "  validation_datagen = None\n",
+        "    # Instantiate the ImageDataGenerator class for validation data\n",
+        "    validation_datagen = ImageDataGenerator(rescale=1./255.)\n",
         "\n",
-        "  # Pass in the appropriate arguments to the flow_from_directory method\n",
-        "  validation_generator = validation_datagen.flow_from_directory(directory=None,\n",
-        "                                                                batch_size=32,\n",
-        "                                                                class_mode=None,\n",
-        "                                                                target_size=(None, None))\n",
-        "  ### END CODE HERE\n",
-        "  return train_generator, validation_generator"
+        "    # Pass in the appropriate arguments to the flow_from_directory method for validation data\n",
+        "    validation_generator = validation_datagen.flow_from_directory(\n",
+        "        directory=VALIDATION_DIR,\n",
+        "        batch_size=32,\n",
+        "        class_mode='binary',\n",
+        "        target_size=(150, 150)\n",
+        "    )\n",
+        "\n",
+        "    return train_generator, validation_generator"
       ]
     },
     {
@@ -380,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "id": "63d2afb2",
       "metadata": {
         "cellView": "code",
@@ -391,8 +399,6 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# GRADED FUNCTION: create_pre_trained_model\n",
         "def create_pre_trained_model(local_weights_file):\n",
         "  \"\"\"\n",
@@ -405,15 +411,15 @@
         "    pre_trained_model: the initialized InceptionV3 model\n",
         "  \"\"\"\n",
         "  ### START CODE HERE\n",
-        "  pre_trained_model = InceptionV3(input_shape = (None, None, None),\n",
+        "  pre_trained_model = InceptionV3(input_shape = (150, 150, 3),\n",
         "                                  include_top = False,\n",
         "                                  weights = None)\n",
         "\n",
         "  pre_trained_model.load_weights(local_weights_file)\n",
         "\n",
         "  # Make all the layers in the pre-trained model non-trainable\n",
-        "  for None in None:\n",
-        "    None = None\n",
+        "  for layer in pre_trained_model.layers:\n",
+        "    layer.trainable = False\n",
         "\n",
         "  ### END CODE HERE\n",
         "\n",
@@ -432,18 +438,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "id": "d12229ac",
       "metadata": {
         "id": "d12229ac",
         "tags": [
           "graded"
-        ]
+        ],
+        "outputId": "069d8c32-397c-4f50-f824-13c88801c5f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 520
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-63-6ff2001dd559>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpre_trained_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_pre_trained_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_weights_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Print the model summary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpre_trained_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-55-0a8c397c95b7>\u001b[0m in \u001b[0;36mcreate_pre_trained_model\u001b[0;34m(local_weights_file)\u001b[0m\n\u001b[1;32m     15\u001b[0m                                   weights = None) \n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m   \u001b[0mpre_trained_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_weights_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m   \u001b[0;31m# Make all the layers in the pre-trained model non-trainable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/keras/src/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0;31m# To get the full stack trace, call:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0;31m# `tf.debugging.disable_traceback_filtering()`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, fs_strategy, fs_persist, fs_threshold, fs_page_size, page_buf_size, min_meta_keep, min_raw_keep, locking, alignment_threshold, alignment_interval, meta_block_size, **kwds)\u001b[0m\n\u001b[1;32m    565\u001b[0m                                  \u001b[0mfs_persist\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfs_persist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfs_threshold\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfs_threshold\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    566\u001b[0m                                  fs_page_size=fs_page_size)\n\u001b[0;32m--> 567\u001b[0;31m                 \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_fid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muserblock_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfcpl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mswmr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mswmr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    568\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    569\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlibver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36mmake_fid\u001b[0;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001b[0m\n\u001b[1;32m    229\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mswmr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mswmr_support\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m             \u001b[0mflags\u001b[0m \u001b[0;34m|=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_SWMR_READ\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 231\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    232\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_RDWR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.open\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] Unable to open file (unable to open file: name = 'path/to/your/weights/file.h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
+          ]
+        }
+      ],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "pre_trained_model = create_pre_trained_model(local_weights_file)\n",
         "\n",
         "# Print the model summary\n",
