--- a/C2/W3/assignment/C2W3_Assignment.ipynb
+++ b/C2/W3/assignment/C2W3_Assignment.ipynb
@@ -287,19 +287,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "id": "5ca4482a",
       "metadata": {
         "id": "5ca4482a",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee9c9f82-89f4-4e67-df54-87a8b8ff78a2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 0 images belonging to 0 classes.\n",
+            "Found 0 images belonging to 0 classes.\n"
+          ]
+        }
+      ],
       "source": [
-        "# grader-required-cell\n",
+        "import os\n",
         "\n",
-        "# Test your generators\n",
+        "# Define the paths to your training and validation directories\n",
+        "train_dir = \"/tmp/cats-v-dogs/training/\"\n",
+        "validation_dir = \"/tmp/cats-v-dogs/validation/\"\n",
+        "\n",
+        "# Create the directories if they don't exist\n",
+        "os.makedirs(train_dir, exist_ok=True)\n",
+        "os.makedirs(validation_dir, exist_ok=True)\n",
         "train_generator, validation_generator = train_val_generators(train_dir, validation_dir)"
       ]
     },
@@ -445,11 +464,11 @@
         "tags": [
           "graded"
         ],
-        "outputId": "069d8c32-397c-4f50-f824-13c88801c5f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 520
-        }
+        },
+        "outputId": "069d8c32-397c-4f50-f824-13c88801c5f2"
       },
       "outputs": [
         {
