--- a/C2/W3/assignment/C2W3_Assignment.ipynb
+++ b/C2/W3/assignment/C2W3_Assignment.ipynb
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "f35f6f72",
       "metadata": {
         "cellView": "code",
@@ -238,87 +238,60 @@
       },
       "outputs": [],
       "source": [
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "# grader-required-cell\n",
         "\n",
+        "# GRADED FUNCTION: train_val_generators\n",
         "def train_val_generators(TRAINING_DIR, VALIDATION_DIR):\n",
-        "    \"\"\"\n",
-        "    Creates the training and validation data generators.\n",
+        "  \"\"\"\n",
+        "  Creates the training and validation data generators\n",
         "\n",
-        "    Args:\n",
-        "        TRAINING_DIR (string): directory path containing the training images\n",
-        "        VALIDATION_DIR (string): directory path containing the testing/validation images\n",
+        "  Args:\n",
+        "    TRAINING_DIR (string): directory path containing the training images\n",
+        "    VALIDATION_DIR (string): directory path containing the testing/validation images\n",
         "\n",
-        "    Returns:\n",
-        "        train_generator, validation_generator: tuple containing the generators\n",
-        "    \"\"\"\n",
+        "  Returns:\n",
+        "    train_generator, validation_generator: tuple containing the generators\n",
+        "  \"\"\"\n",
+        "  ### START CODE HERE\n",
         "\n",
-        "    # Instantiate the ImageDataGenerator class for training data\n",
-        "    train_datagen = ImageDataGenerator(\n",
-        "        rescale=1./255.,\n",
-        "        rotation_range=40,\n",
-        "        width_shift_range=0.2,\n",
-        "        height_shift_range=0.2,\n",
-        "        shear_range=0.2,\n",
-        "        zoom_range=0.2,\n",
-        "        horizontal_flip=True\n",
-        "    )\n",
+        "  # Instantiate the ImageDataGenerator class\n",
+        "  # Don't forget to normalize pixel values and set arguments to augment the images\n",
+        "  train_datagen = None\n",
         "\n",
-        "    # Pass in the appropriate arguments to the flow_from_directory method for training data\n",
-        "    train_generator = train_datagen.flow_from_directory(\n",
-        "        directory=TRAINING_DIR,\n",
-        "        batch_size=40,\n",
-        "        class_mode='binary',\n",
-        "        target_size=(150, 150)\n",
-        "    )\n",
+        "  # Pass in the appropriate arguments to the flow_from_directory method\n",
+        "  train_generator = train_datagen.flow_from_directory(directory=None,\n",
+        "                                                      batch_size=32,\n",
+        "                                                      class_mode=None,\n",
+        "                                                      target_size=(None, None))\n",
         "\n",
-        "    # Instantiate the ImageDataGenerator class for validation data\n",
-        "    validation_datagen = ImageDataGenerator(rescale=1./255.)\n",
+        "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
+        "  # Remember that validation data should not be augmented\n",
+        "  validation_datagen = None\n",
         "\n",
-        "    # Pass in the appropriate arguments to the flow_from_directory method for validation data\n",
-        "    validation_generator = validation_datagen.flow_from_directory(\n",
-        "        directory=VALIDATION_DIR,\n",
-        "        batch_size=32,\n",
-        "        class_mode='binary',\n",
-        "        target_size=(150, 150)\n",
-        "    )\n",
-        "\n",
-        "    return train_generator, validation_generator"
+        "  # Pass in the appropriate arguments to the flow_from_directory method\n",
+        "  validation_generator = validation_datagen.flow_from_directory(directory=None,\n",
+        "                                                                batch_size=32,\n",
+        "                                                                class_mode=None,\n",
+        "                                                                target_size=(None, None))\n",
+        "  ### END CODE HERE\n",
+        "  return train_generator, validation_generator"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "id": "5ca4482a",
       "metadata": {
         "id": "5ca4482a",
         "tags": [
           "graded"
-        ],
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ee9c9f82-89f4-4e67-df54-87a8b8ff78a2"
+        ]
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found 0 images belonging to 0 classes.\n",
-            "Found 0 images belonging to 0 classes.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "import os\n",
+        "# grader-required-cell\n",
         "\n",
-        "# Define the paths to your training and validation directories\n",
-        "train_dir = \"/tmp/cats-v-dogs/training/\"\n",
-        "validation_dir = \"/tmp/cats-v-dogs/validation/\"\n",
-        "\n",
-        "# Create the directories if they don't exist\n",
-        "os.makedirs(train_dir, exist_ok=True)\n",
-        "os.makedirs(validation_dir, exist_ok=True)\n",
+        "# Test your generators\n",
         "train_generator, validation_generator = train_val_generators(train_dir, validation_dir)"
       ]
     },
@@ -407,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "63d2afb2",
       "metadata": {
         "cellView": "code",
@@ -418,6 +391,8 @@
       },
       "outputs": [],
       "source": [
+        "# grader-required-cell\n",
+        "\n",
         "# GRADED FUNCTION: create_pre_trained_model\n",
         "def create_pre_trained_model(local_weights_file):\n",
         "  \"\"\"\n",
@@ -430,15 +405,15 @@
         "    pre_trained_model: the initialized InceptionV3 model\n",
         "  \"\"\"\n",
         "  ### START CODE HERE\n",
-        "  pre_trained_model = InceptionV3(input_shape = (150, 150, 3),\n",
+        "  pre_trained_model = InceptionV3(input_shape = (None, None, None),\n",
         "                                  include_top = False,\n",
         "                                  weights = None)\n",
         "\n",
         "  pre_trained_model.load_weights(local_weights_file)\n",
         "\n",
         "  # Make all the layers in the pre-trained model non-trainable\n",
-        "  for layer in pre_trained_model.layers:\n",
-        "    layer.trainable = False\n",
+        "  for None in None:\n",
+        "    None = None\n",
         "\n",
         "  ### END CODE HERE\n",
         "\n",
@@ -457,18 +432,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 83,
       "id": "d12229ac",
       "metadata": {
         "id": "d12229ac",
         "tags": [
           "graded"
         ],
+        "outputId": "ec4a2e83-7aa0-43ec-954d-0b967d6e2b69",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 520
-        },
-        "outputId": "069d8c32-397c-4f50-f824-13c88801c5f2"
+          "height": 538
+        }
       },
       "outputs": [
         {
@@ -478,23 +453,35 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-63-6ff2001dd559>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpre_trained_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_pre_trained_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_weights_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Print the model summary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpre_trained_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-55-0a8c397c95b7>\u001b[0m in \u001b[0;36mcreate_pre_trained_model\u001b[0;34m(local_weights_file)\u001b[0m\n\u001b[1;32m     15\u001b[0m                                   weights = None) \n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m   \u001b[0mpre_trained_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_weights_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m   \u001b[0;31m# Make all the layers in the pre-trained model non-trainable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-83-564aab899ce0>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mlocal_weights_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mpre_trained_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVGG16\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m150\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m150\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minclude_top\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mpre_trained_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_weights_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mpre_trained_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/keras/src/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0;31m# To get the full stack trace, call:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0;31m# `tf.debugging.disable_traceback_filtering()`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, fs_strategy, fs_persist, fs_threshold, fs_page_size, page_buf_size, min_meta_keep, min_raw_keep, locking, alignment_threshold, alignment_interval, meta_block_size, **kwds)\u001b[0m\n\u001b[1;32m    565\u001b[0m                                  \u001b[0mfs_persist\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfs_persist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfs_threshold\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfs_threshold\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    566\u001b[0m                                  fs_page_size=fs_page_size)\n\u001b[0;32m--> 567\u001b[0;31m                 \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_fid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muserblock_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfcpl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mswmr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mswmr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    568\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    569\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlibver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36mmake_fid\u001b[0;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001b[0m\n\u001b[1;32m    229\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mswmr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mswmr_support\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m             \u001b[0mflags\u001b[0m \u001b[0;34m|=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_SWMR_READ\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 231\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    232\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_RDWR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
             "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
             "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.open\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] Unable to open file (unable to open file: name = 'path/to/your/weights/file.h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] Unable to open file (unable to open file: name = '/content/weights_file.h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
           ]
         }
       ],
       "source": [
-        "pre_trained_model = create_pre_trained_model(local_weights_file)\n",
+        "import os\n",
+        "from tensorflow.keras.applications import VGG16\n",
         "\n",
-        "# Print the model summary\n",
-        "pre_trained_model.summary()"
+        "# Reemplaza 'weights_file.h5' con el nombre de tu archivo de pesos\n",
+        "weights_filename = 'weights_file.h5'\n",
+        "\n",
+        "# Obtén la ruta absoluta al archivo de pesos\n",
+        "local_weights_file = os.path.abspath(weights_filename)\n",
+        "pre_trained_model = VGG16(input_shape=(150, 150, 3), include_top=False)\n",
+        "pre_trained_model.load_weights(local_weights_file)\n",
+        "pre_trained_model.summary()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -748,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "id": "bf9b8b89",
       "metadata": {
         "cellView": "code",
@@ -759,8 +746,6 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# GRADED FUNCTION: create_final_model\n",
         "def create_final_model(pre_trained_model, last_output):\n",
         "  \"\"\"\n",
@@ -779,42 +764,56 @@
         "  ### START CODE HERE\n",
         "\n",
         "  # Add a fully connected layer with 1024 hidden units and ReLU activation\n",
-        "  x = None\n",
+        "  x = layers.Dense(1024, activation='relu')(x)\n",
         "  # Add a dropout rate of 0.2\n",
-        "  x = None\n",
+        "  x = layers.Dropout(0.2)(x)\n",
         "  # Add a final sigmoid layer for classification\n",
-        "  x = None\n",
+        "  x = layers.Dense  (1, activation='sigmoid')(x)\n",
         "\n",
         "  # Create the complete model by using the Model class\n",
-        "  model = Model(inputs=None, outputs=None)\n",
+        "  model = Model(inputs=pre_trained_model.input, outputs=x)\n",
         "\n",
         "  # Compile the model\n",
         "  model.compile(optimizer = RMSprop(learning_rate=0.0001),\n",
-        "                loss = None,\n",
-        "                metrics = [None])\n",
+        "                loss = 'binary_crossentropy',\n",
+        "                metrics = ['accuracy'])\n",
         "\n",
         "  ### END CODE HERE\n",
+        "\n",
         "\n",
         "  return model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 89,
       "id": "4e00a764",
       "metadata": {
         "id": "4e00a764",
         "tags": [
           "graded"
-        ]
+        ],
+        "outputId": "f740b634-e01c-4235-cc3b-1138dae59b58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 23,105,345 total parameters in this model.\n",
+            "There are 23,105,345 trainable parameters in this model.\n"
+          ]
+        }
+      ],
       "source": [
-        "# grader-required-cell\n",
         "\n",
+        "last_output = pre_trained_model.layers[-1].output\n",
         "# Save your model in a variable\n",
         "model = create_final_model(pre_trained_model, last_output)\n",
-        "\n",
+        "model = create_final_model(pre_trained_model, last_output)\n",
         "# Inspect parameters\n",
         "total_params = model.count_params()\n",
         "num_trainable_params = sum([w.shape.num_elements() for w in model.trainable_weights])\n",
