--- a/C2/W3/assignment/C2W3_Assignment.ipynb
+++ b/C2/W3/assignment/C2W3_Assignment.ipynb
@@ -439,11 +439,11 @@
         "tags": [
           "graded"
         ],
-        "outputId": "ec4a2e83-7aa0-43ec-954d-0b967d6e2b69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 538
-        }
+        },
+        "outputId": "ec4a2e83-7aa0-43ec-954d-0b967d6e2b69"
       },
       "outputs": [
         {
@@ -615,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 94,
       "id": "18f5b99d",
       "metadata": {
         "id": "18f5b99d",
@@ -660,7 +660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "id": "9e3ec1d3",
       "metadata": {
         "id": "9e3ec1d3",
@@ -672,7 +672,8 @@
       "source": [
         "# grader-required-cell\n",
         "\n",
-        "last_output = output_of_last_layer(pre_trained_model)"
+        "last_output = pre_trained_model.layers[-1].output\n",
+        "model = create_final_model(pre_trained_model, last_output)"
       ]
     },
     {
@@ -705,15 +706,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 90,
       "id": "3277ef8b",
       "metadata": {
         "id": "3277ef8b",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "490a9f0c-1bec-4e14-c1f3-a657652b9186"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The pretrained model has type: <class 'keras.src.engine.functional.Functional'>\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -793,10 +806,10 @@
         "tags": [
           "graded"
         ],
-        "outputId": "f740b634-e01c-4235-cc3b-1138dae59b58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f740b634-e01c-4235-cc3b-1138dae59b58"
       },
       "outputs": [
         {
